expanded the class main with aditional functions to sort the wepaons list in a specific order