@@ -4,13 +4,16 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class Main {
 
     public static void main(String[] args) throws IOException {
 
         List<Weapon> weapons = new ArrayList<>();
+
 
         weapons = Files.lines(new File("weapons.csv").toPath())
                 .skip(1)
@@ -24,7 +27,22 @@ public class Main {
                         Integer.parseInt(s[5]),
                         Integer.parseInt(s[6])
                 ))
-                .toList();
+                .collect(Collectors.toList());
+
+        weapons.sort((w1, w2) -> {
+            return Integer.compare(w1.getDamage(), w2.getDamage());
+        });
+
+        weapons.forEach(System.out::println);
+
+        System.out.println();
+
+        weapons.sort(Comparator.comparing(Weapon::getCombatType)
+                .thenComparing(Weapon::getDamageType)
+                .thenComparing(Weapon::getName)
+        );
+
+        weapons.forEach(System.out::println);
     }
 
 }
